# api/openapi.yaml
@@ -134,6 +134,13 @@ paths:
           explode: true
           schema:
             type: string
+        - name: signature
+          in: query
+          description: 署名
+          required: true
+          explode: true
+          schema:
+            type: string
       responses:
         '200':
           description: OK
